--- a/index.html
+++ b/index.html
@@ -17,8 +17,71 @@
             <h1>Meet Our Team</h1>
             <p class="text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam odio excepturi, pariatur distinctio quibusdam doloribus, obcaecati nihil officiis expedita illum sapiente aperiam veniam suscipit aliquam ratione impedit. Earum, voluptates minima!</p>
 
-            
+            <div class="subject">
+                <img src="./img/male1.png" alt="male1">
+                <div class="info">
+                    <div class="center">
+                        <h2>MARCO BIANCHI</h2>
+                        <div>Designer</div>
+                        <a href="#">marcobianchi@team.com</a>
+                    </div>
+                </div>
+            </div>
 
+            <div class="subject">
+                <img src="./img/male1.png" alt="male1">
+                <div class="info">
+                    <div class="center">
+                        <h2>MARCO BIANCHI</h2>
+                        <div>Designer</div>
+                        <a href="#">marcobianchi@team.com</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="subject">
+                <img src="./img/male1.png" alt="male1">
+                <div class="info">
+                    <div class="center">
+                        <h2>MARCO BIANCHI</h2>
+                        <div>Designer</div>
+                        <a href="#">marcobianchi@team.com</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="subject">
+                <img src="./img/male1.png" alt="male1">
+                <div class="info">
+                    <div class="center">
+                        <h2>MARCO BIANCHI</h2>
+                        <div>Designer</div>
+                        <a href="#">marcobianchi@team.com</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="subject">
+                <img src="./img/male1.png" alt="male1">
+                <div class="info">
+                    <div class="center">
+                        <h2>MARCO BIANCHI</h2>
+                        <div>Designer</div>
+                        <a href="#">marcobianchi@team.com</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="subject">
+                <img src="./img/male1.png" alt="male1">
+                <div class="info">
+                    <div class="center">
+                        <h2>MARCO BIANCHI</h2>
+                        <div>Designer</div>
+                        <a href="#">marcobianchi@team.com</a>
+                    </div>
+                </div>
+            </div>
 
         </main>
 
