--- a/index.html
+++ b/index.html
@@ -29,56 +29,56 @@
             </div>
 
             <div class="subject">
-                <img src="./img/male1.png" alt="male1">
+                <img src="./img/female1.png" alt="male1">
                 <div class="info">
                     <div class="center">
-                        <h2>MARCO BIANCHI</h2>
-                        <div>Designer</div>
-                        <a href="#">marcobianchi@team.com</a>
+                        <h2>LAURA ROSSI</h2>
+                        <div>Front-end Developer</div>
+                        <a href="#">laurarossi@team.com</a>
                     </div>
                 </div>
             </div>
 
             <div class="subject">
-                <img src="./img/male1.png" alt="male1">
+                <img src="./img/male2.png" alt="male1">
                 <div class="info">
                     <div class="center">
-                        <h2>MARCO BIANCHI</h2>
-                        <div>Designer</div>
-                        <a href="#">marcobianchi@team.com</a>
+                        <h2>GIORGIO VERDI</h2>
+                        <div>Back-end Developer</div>
+                        <a href="#">giorgioverdi@team.com</a>
                     </div>
                 </div>
             </div>
 
             <div class="subject">
-                <img src="./img/male1.png" alt="male1">
+                <img src="./img/female2.png" alt="male1">
                 <div class="info">
                     <div class="center">
-                        <h2>MARCO BIANCHI</h2>
-                        <div>Designer</div>
-                        <a href="#">marcobianchi@team.com</a>
+                        <h2>MARTA IPSIM</h2>
+                        <div>SEO Specialist</div>
+                        <a href="#">martinaipsum@team.com</a>
                     </div>
                 </div>
             </div>
 
             <div class="subject">
-                <img src="./img/male1.png" alt="male1">
+                <img src="./img/male3.png" alt="male1">
                 <div class="info">
                     <div class="center">
-                        <h2>MARCO BIANCHI</h2>
-                        <div>Designer</div>
-                        <a href="#">marcobianchi@team.com</a>
+                        <h2>ROBERTO LOREM</h2>
+                        <div>Project Manager</div>
+                        <a href="#">robertolorem@team.com</a>
                     </div>
                 </div>
             </div>
 
             <div class="subject">
-                <img src="./img/male1.png" alt="male1">
+                <img src="./img/female3.png" alt="male1">
                 <div class="info">
                     <div class="center">
-                        <h2>MARCO BIANCHI</h2>
-                        <div>Designer</div>
-                        <a href="#">marcobianchi@team.com</a>
+                        <h2>DANIELA AMET</h2>
+                        <div>Analyst</div>
+                        <a href="#">danielaamet@team.com</a>
                     </div>
                 </div>
             </div>
